@@ -142,6 +142,10 @@
             Fix Storage.write duplicate file issue in some rare cases (fix #1801)
             Bangle.js: fix post-kickstarter issue adding widgets in bottom of screen (#1790)
             Bangle.js: fix magnetometer self-calibration
+            Espruino Original: Removed Debugger, Tab complete, AT command networking from WIZnet networking build to free enough Flash
+            Espruino Pico: Added a normal build that doesn't contain CC3000 or WIZnet support
+            Espruino Pico: Removed Debugger and Vector font from WIZnet/CC3000 networking versions to free enough Flash
+            HYSTM32_28: Removed from build due to lack of interest and difficulty with increased firmware size
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
